Closed Bug 262866 Opened 20 years ago Closed 18 years ago

Invalid path offered when file already exists (Save all attachments)

Categories

(MailNews Core :: Attachments, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: ivan.icin, Assigned: mkmelin)

References

Details

(Keywords: verified1.8.1.2)

Attachments

(1 file, 2 obsolete files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; rv:1.7.3) Gecko/20040913 Firefox/0.10.1 Build Identifier: Thunderbird version 0.8 (20040913) I guess it is a mail/news bug, but as I use only Thunderbird, I submited it here. I didn't find any doubled in MailNews bugs. Reproducible: Always Steps to Reproduce: 1. find message with attachments 2. save at least one attachment to dir 3. save all attacments to that dir 4. click cancel in dialogue (not to replace file) Actual Results: Save file dialogue appeared with whole path in file name field begining with c-\ instead of c:\ Expected Results: There should be no path in file name field, or at least it should begin with c:\ This is probably MailNews issue, but I am using Thunderbird so I am reporting here (I didn't find any duplicates in MailNews)
*** Bug 270384 has been marked as a duplicate of this bug. ***
Reproduced with TB 0.9+1112, and with Moz 1.8a5-1019. Behavior occurs with MailNews, so updating Product. Duplicate is from Mac OS X, so updating platform.
Assignee: mscott → sspitzer
Status: UNCONFIRMED → NEW
Component: Mail Window Front End → Attachments
Ever confirmed: true
OS: Windows XP → All
Product: Thunderbird → MailNews
Hardware: PC → All
Version: unspecified → Trunk
Product: MailNews → Core
*** Bug 273183 has been marked as a duplicate of this bug. ***
*** Bug 287343 has been marked as a duplicate of this bug. ***
*** Bug 291978 has been marked as a duplicate of this bug. ***
*** Bug 222752 has been marked as a duplicate of this bug. ***
Attached patch proposed patch (obsolete) — Splinter Review
get leaf name before open filepicker.
Attachment #182467 - Attachment is obsolete: true
Comment on attachment 182469 [details] [diff] [review] proposed patch (removed all tabs) I want a reviewer to review this patch. But I don't know who are reviewers of mailnews.
Attachment #182469 - Flags: review?(bienvenu)
*** Bug 315275 has been marked as a duplicate of this bug. ***
*** Bug 229233 has been marked as a duplicate of this bug. ***
*** Bug 322924 has been marked as a duplicate of this bug. ***
*** Bug 336567 has been marked as a duplicate of this bug. ***
*** Bug 348380 has been marked as a duplicate of this bug. ***
This is a slightly modified patch based on the earlier one by Katsuhiro MIHARA. (I don't know what the braces were supposed to do there... ?)
Assignee: sspitzer → mkmelin+mozilla
Attachment #182469 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #246627 - Flags: superreview?(bienvenu)
Attachment #246627 - Flags: review?(bienvenu)
Attachment #182469 - Flags: review?(bienvenu)
Comment on attachment 246627 [details] [diff] [review] proposed fix based on the patch by Katsuhiro MIHARA this fixes the problem; thx for the patch. My one worry is the error returns, which will prevent the UI from coming up (note that we handle the other errors w/o returning). But I don't think we should encounter these errors...
Attachment #246627 - Flags: superreview?(bienvenu)
Attachment #246627 - Flags: superreview+
Attachment #246627 - Flags: review?(bienvenu)
Attachment #246627 - Flags: review+
Whiteboard: [checkin needed]
mozilla/mailnews/base/src/nsMessenger.cpp 1.349
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: --- → mozilla1.9alpha
Attachment #246627 - Flags: approval-thunderbird2?
Attachment #246627 - Flags: approval-thunderbird2? → approval-thunderbird2+
Whiteboard: [checkin needed (1.8 branch)]
mozilla/mailnews/base/src/nsMessenger.cpp 1.320.2.16
Keywords: fixed1.8.1.2
Whiteboard: [checkin needed (1.8 branch)]
Verified fixed for branch/1.8.1.2 with Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.2pre) Gecko/20070124 Thunderbird/2.0b2pre Mnenhy/0.7.4.10002 ID:2007012504
Status: RESOLVED → VERIFIED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: