Bug 262866: Invalid path offered when file already exists (Save all attachments), patch by Magnus Melin <mkmelin+mozilla@iki.fi>/Katsuhiro MIHARA <katsuhiromihara@goo.jp>, r+sr=bienvenu